--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -44,13 +44,11 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check if current release was already built
-        uses: tyriis/docker-image-tag-exists@v2.1.0
+        id: docker-image
+        uses: javajawa/check-registry-for-image@v3
         with:
-          # The container image registry
-          registry: ${{ env.REGISTRY }}
-
-          # The container image name
-          repository: ported-pw/pelican-panel-docker
+          registry: ${{ env.REGISTRY }}  # e.g. https://aws_account_id.dkr.ecr.us-west-2.amazonaws.com
+          repository: ${{ env.GITHUB_REPOSITORY }}     # my-awesome-project/serve
 
           # The container image tag
           tag: ${{ steps.pelican-panel.outputs.release }}
@@ -58,7 +56,7 @@ jobs:
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
-        if: github.event_name != 'pull_request'
+        if:  steps.docker-image.outputs.tag == 'not found' && github.event_name != 'pull_request'
         uses: sigstore/cosign-installer@59acb6260d9c0ba8f4a2f9d9b48431a222b68e20 #v3.5.0
         with:
           cosign-release: 'v2.2.4'
@@ -72,7 +70,7 @@ jobs:
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
+        if: steps.docker-image.outputs.tag == 'not found' && github.event_name != 'pull_request'
         uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
         with:
           registry: ${{ env.REGISTRY }}
@@ -82,6 +80,7 @@ jobs:
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
+        if: steps.docker-image.outputs.tag == 'not found'
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
@@ -99,7 +98,7 @@ jobs:
       # transparency data even for private images, pass --force to cosign below.
       # https://github.com/sigstore/cosign
       - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
+        if: ${{ steps.docker-image.outputs.tag == 'not found' &&  github.event_name != 'pull_request' }}
         env:
           # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
           TAGS: ${{ steps.meta.outputs.tags }}
