--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,16 +43,6 @@ jobs:
           excludes: prerelease, draft
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Check if current release was already built
-        id: docker-image
-        uses: javajawa/check-registry-for-image@v3
-        with:
-          registry: ${{ env.REGISTRY }}  # e.g. https://aws_account_id.dkr.ecr.us-west-2.amazonaws.com
-          repository: ${{ env.GITHUB_REPOSITORY }}     # my-awesome-project/serve
-
-          # The container image tag
-          tag: ${{ steps.pelican-panel.outputs.release }}
-
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
@@ -77,10 +67,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Check if current release was already built
+        id: docker-image
+        run: |
+          set +e
+          docker buildx imagetools inspect ${{ env.REGISTRY }}/${{ env.GITHUB_REPOSITORY }}:${{ steps.pelican-panel.outputs.release }}
+          echo "exitcode=$?" >> $GITHUB_OUTPUT
+
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
-        if: steps.docker-image.outputs.tag == 'not found'
+        if: steps.docker-image.exitcode == 1
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
@@ -98,7 +95,7 @@ jobs:
       # transparency data even for private images, pass --force to cosign below.
       # https://github.com/sigstore/cosign
       - name: Sign the published Docker image
-        if: ${{ steps.docker-image.outputs.tag == 'not found' &&  github.event_name != 'pull_request' }}
+        if: ${{ steps.docker-image.exitcode == 1 &&  github.event_name != 'pull_request' }}
         env:
           # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
           TAGS: ${{ steps.meta.outputs.tags }}
